// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Option> rendering with children should match snapshot 1`] = `
<div
  className="optionsWrapper"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <label>
    <Inline
      alignItems="center"
      scale="s"
    >
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[Function]}
        type="radio"
        value="foo"
      />
      <test-file-stub />
      <span
        className="option"
      >
        Some label
      </span>
    </Inline>
  </label>
</div>
`;

exports[`<Option> rendering without children should match snapshot 1`] = `
<div
  className="optionsWrapper"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <label>
    <Inline
      alignItems="center"
      scale="s"
    >
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[Function]}
        type="radio"
        value="foo"
      />
      <test-file-stub />
    </Inline>
  </label>
</div>
`;
